Closed
Bug 79178
Opened 24 years ago
Closed 24 years ago
Trying to open an email with attachments crashes Mozilla in IMGICON.DLL - Trunk [@ nsIconChannel::AsyncOpen]
Categories
(Core :: Graphics: ImageLib, defect, P1)
Tracking
()
VERIFIED
FIXED
People
(Reporter: ajbu, Assigned: mscott)
References
()
Details
(Keywords: crash, smoketest, topcrash)
Crash Data
Attachments
(1 file)
|
4.74 KB,
patch
|
Details | Diff | Splinter Review |
Error: Unhandled exception in mozilla.exe (IMGICON.DLL): 0xC0000005: Access
Violation.
Steps to reproduce:
Installed Mozilla Talkback 2001050704
Open Tasks/Mail
Click on an email message with attachments
Mozilla crashes when drawing the preview.
Reproducable: Always.
I tried this on two computers, both Windows 2000 en Windows 98. Crash doens't
happen when removing imgicon.dll (no icons shown for attachments)
I get the same error when typing "moz-icon://test.txt" in the URL bar. (If
that's a legal statement at all..)
I submitted a talkback report, don't know how to get the ID for that.
| Assignee | ||
Comment 1•24 years ago
|
||
here's the stack trace of the crash....
re-assigning to me.
nsIconChannel::AsyncOpen
[d:\builds\seamonkey\mozilla\modules\libpr0n\decoders\icon\win\nsIconChannel.cpp,
line 309]
nsDocumentOpenInfo::Open
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 208]
nsURILoader::OpenURIVia
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 838]
nsURILoader::OpenURI
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 512]
nsDocShell::DoChannelLoad
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 3844]
nsDocShell::DoURILoad [d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp,
line 3626]
nsDocShell::InternalLoad
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 3376]
nsDocShell::LoadURI [d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp,
line 511]
nsDocShell::LoadURI [d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp,
line 1680]
Assignee: pavlov → mscott
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•24 years ago
|
||
ajbu, are you running a debug build or a release build? I forgot to make
packaging changes for moz-icon urls so strange things could happen on release
builds.
I've been seeing this also, all weekend in fact. The problem exists in today's
build: 2001050704 on Windows 98 SE. It's a nightly build, so I guess this isn't
what you call a debug.
Upping the severity to critical, since I've been crashing left and right and I
can't get around it (unless I don't accidentially click on messages with
attachments).
Severity: normal → critical
I compiled a release version, and downloaded the mozilla-win32-talkback.zip
from the ftp Nightly directory. I didn't try a debug build.
| Assignee | ||
Comment 10•24 years ago
|
||
*** Bug 79464 has been marked as a duplicate of this bug. ***
Comment 11•24 years ago
|
||
*** Bug 79470 has been marked as a duplicate of this bug. ***
Comment 12•24 years ago
|
||
to crash on Win2K i don't need to open an email with attachment, it crashes on
any message with or without attachment bug # 79466)
| Assignee | ||
Comment 13•24 years ago
|
||
yuck....I just can't reproduce this on my machine (I'm running win2k). It must
have to do with some folk's registry settings since I'm trying to read out an
icon for an attachment from the windows registry.
Any chance anyone has been able to reproduce this on a debug build? The line
number in talkback doesn't make sense as the cause of a crash....
Severity: critical → blocker
Status: NEW → ASSIGNED
Priority: -- → P1
| Assignee | ||
Comment 14•24 years ago
|
||
I take it back. I can reproduce this on a release build on my machine. debug
builds don't seem to demonstrate the problem. Bumping to smoketest blocker.
Keywords: smoketest
| Assignee | ||
Comment 15•24 years ago
|
||
*** Bug 79446 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•24 years ago
|
||
| Assignee | ||
Comment 17•24 years ago
|
||
once leaf is done getting good xpcdom builds, he's going to let me poke around
on the release machine.
| Assignee | ||
Comment 18•24 years ago
|
||
the patch fixed the problem and is now checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 19•24 years ago
|
||
*** Bug 79590 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
*** Bug 79741 has been marked as a duplicate of this bug. ***
Comment 21•24 years ago
|
||
is that fixed? i have this problem today on Win NT (2001-05-10 build)
Comment 22•24 years ago
|
||
Yes.
Tested today on lates build in NT4
Comment 23•24 years ago
|
||
do you mean it is crashing for you on Win NT?
Comment 24•24 years ago
|
||
marina, if you are crashing with today's build I would reopen the bug
Comment 25•24 years ago
|
||
I mean that it is fixed. I have tetsted it on NT and there was no crash
Comment 27•24 years ago
|
||
Adding topcrash kw and Trunk [@ nsIconChannel::AsyncOpen] to summary for future
reference.
Keywords: topcrash
Summary: Trying to open an email with attachments crashes Mozilla in IMGICON.DLL → Trying to open an email with attachments crashes Mozilla in IMGICON.DLL - Trunk [@ nsIconChannel::AsyncOpen]
Updated•14 years ago
|
Crash Signature: [@ nsIconChannel::AsyncOpen]
You need to log in
before you can comment on or make changes to this bug.
Description
•