Bug #79178 --> fix crash on release windows builds for moz-icon urls a=leaf